fix: avoid unsightly wrapping of on blog pages
Because of inline-block, if the "When" data has to wrap onto next line,
following time span ends up wrapping after the rightmost edge instead of
the middot.

--- a/src/client/components/Metadata.css
+++ b/src/client/components/Metadata.css
@@ -1,6 +1,7 @@
 .metadata {
   color: #bbb;
   font-style: italic;
+  margin-bottom: 1rem;
 }
 
 .metadata > *:after {
