--- a/src/client/components/When.css
+++ b/src/client/components/When.css
@@ -1,13 +1,6 @@
 .when {
   color: #bbb;
-  display: inline-block;
   font-style: italic;
-  margin-bottom: 1rem;
-}
-
-/* Hack. Margin is usually what we want, but looks terrible in a table cell. */
-td .when {
-  margin: 0;
 }
 
 .when:before {
